--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
+    "vuetify-confirm": "^2.0.4",
     "vuetify-message-snackbar": "^0.2.7",
     "vuex": "^3.4.0",
     "vuex-module-decorators": "^1.0.1"
